--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -124,6 +124,15 @@
 
   z-index: 4;
 
+  transition: 250ms;
+
+  animation-name: ice-cream;
+  animation-duration: 1s;
+  animation-iteration-count: 2;
+  animation-timing-function: linear;
+  animation-direction: alternate-reverse;
+  animation-delay: -1s;
+
   @media screen and (min-width: $tablet) {
     left: 378px;
     width: 143px;
@@ -131,6 +140,16 @@
   @media screen and (min-width: $desktop) {
     left: 594px;
     width: 236px;
+  }
+}
+@keyframes ice-cream {
+  0% {
+    scale: (0);
+    rotate: (30deg);
+  }
+  100% {
+    scale: (1);
+    rotate: (360deg);
   }
 }
 .hero-product {
@@ -305,6 +324,14 @@
 }
 .hero-girl-img {
   display: none;
+
+  animation-name: girl;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  animation-delay: -0.5s;
+
   @media screen and (min-width: $tablet) {
     display: block;
     position: absolute;
@@ -324,6 +351,16 @@
     right: 69px;
   }
 }
+@keyframes girl {
+  0% {
+    scale: (0);
+    rotate: (-30deg);
+  }
+  100% {
+    scale: (1);
+    rotate: (-360deg);
+  }
+}
 .hero-circle {
   display: block;
   content: '';
@@ -338,6 +375,13 @@
 
   z-index: 3;
 
+  animation-name: pink-circle;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: 2;
+  animation-direction: alternate-reverse;
+  animation-delay: -2s;
+
   @media screen and (min-width: $tablet) {
     height: 323px;
     width: 323px;
@@ -349,5 +393,16 @@
     width: 538px;
     bottom: 75px;
     left: 475px;
+  }
+}
+@keyframes pink-circle {
+  0% {
+    scale: (0);
+  }
+  50% {
+    scale: (0.5);
+  }
+  100% {
+    scale: (1);
   }
 }
