--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -1,1 +1,377 @@
+@media screen and (min-width: 1200px) {
+  .social-list {
+    display: inline-flex;
+  }
 
+  .social-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .icon-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #fea5bb;
+  }
+
+  .social {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
+
+  .icon-social:hover,
+  .icon-social:focus {
+    background-color: #d41443;
+    //color: blue;
+  }
+
+  .footer__first-title {
+    position: absolute;
+    width: 472px;
+    height: 34px;
+    margin-left: 114px;
+    top: 4923px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 34px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color: #ffa5ba;
+  }
+
+  .footer__second-title {
+    position: absolute;
+    width: 474px;
+    height: 66px;
+    margin-left: 112px;
+    top: 4972px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 57px;
+    line-height: 66px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    color: $main-red-color;
+  }
+
+  .social-list {
+    position: absolute;
+    width: 151px;
+    height: 34px;
+    margin-left: 1008px;
+    top: 4923px;
+  }
+
+  .footer__contact {
+    position: absolute;
+    width: 319px;
+    height: 30px;
+    margin-left: 845px;
+    top: 5007px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 186%;
+
+    letter-spacing: 0.02em;
+
+    color: $main-black-color;
+  }
+
+  .footer__contact span {
+    color: $main-red-color;
+  }
+
+  .footer__copyright {
+    position: absolute;
+    width: 1280px;
+    height: 26px;
+    padding-left: 502px;
+    top: 5144px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 186%;
+
+    letter-spacing: 0.02em;
+
+    color: $main-grey-color;
+  }
+
+  .line {
+    width: 99%;
+    size: 4px;
+    color: $main-grey-color;
+    position: absolute;
+    top: 5135px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .social-list {
+    display: inline-flex;
+  }
+
+  .social-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .icon-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: $light-pink-color;
+  }
+
+  .social {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
+
+  .icon-social:hover,
+  .icon-social:focus {
+    background-color: $main-red-color;
+  }
+
+  .footer__first-title {
+    position: absolute;
+    width: 340px;
+    height: 57px;
+    margin-left: 34px;
+    top: 4236px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color: $dark-pink-color;
+  }
+
+  .footer__second-title {
+    position: absolute;
+    width: 340px;
+    height: 110px;
+    margin-left: 34px;
+    top: 4309px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    color: $main-red-color;
+  }
+
+  .social-list {
+    position: absolute;
+    width: 162px;
+    height: 34px;
+    margin-left: 572px;
+    top: 4229px;
+  }
+
+  .footer__contact {
+    position: absolute;
+    width: 268px;
+    height: 26px;
+    margin-left: 466px;
+    top: 4309px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 186%;
+
+    text-align: right;
+
+    color: $main-black-color;
+  }
+
+  .footer__contact span {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    color: $main-red-color;
+  }
+
+  .footer__copyright {
+    position: absolute;
+    height: 26px;
+    padding-left: 246px;
+    top: 4539px;
+    text-align: center;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 186%;
+
+    letter-spacing: 0.02em;
+
+    color: $main-grey-color;
+  }
+
+  .line {
+    width: 90%;
+    size: 4px;
+    color: $main-grey-color;
+    position: absolute;
+    top: 4510px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .social-list {
+    display: inline-flex;
+  }
+
+  .social-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .icon-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: $light-pink-color;
+  }
+
+  .social {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
+
+  .icon-social:hover,
+  .icon-social:focus {
+    background-color: $main-red-color;
+  }
+
+  .footer__first-title {
+    position: absolute;
+    width: 232px;
+    height: 42px;
+    margin-left: 22px;
+    top: 6706px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    text-transform: uppercase;
+
+    color: $dark-pink-color;
+  }
+
+  .footer__second-title {
+    position: absolute;
+    width: 200px;
+    height: 76px;
+    margin-left: 20px;
+    top: 6765px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 39px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color: $main-red-color;
+  }
+
+  .social-list {
+    position: absolute;
+    width: 152.47px;
+    height: 32px;
+    margin-left: 147px;
+    top: 6884px;
+  }
+
+  .footer__contact {
+    position: absolute;
+    width: 230px;
+    height: 22px;
+    margin-left: 70px;
+    top: 6962px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 186%;
+
+    text-align: right;
+
+    color: $main-black-color;
+  }
+
+  .footer__contact span {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 9px;
+    color: $main-red-color;
+  }
+
+  .footer__copyright {
+    position: absolute;
+    width: 150px;
+    height: 42px;
+    padding-left: 0;
+    margin-left: 25%;
+    top: 7049px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 152%;
+
+    text-align: center;
+
+    color: $main-grey-color;
+  }
+
+  .line {
+    width: 90%;
+    size: 4px;
+    color: $main-grey-color;
+    position: absolute;
+    top: 7027px;
+  }
+}
