добавляет фоследние фичи в секции

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -17,19 +17,19 @@
 
         <div class="teacher-list">
           <ul class="teacher-list_list">
-            <li class="teacher-list-item">
+            <li class="teacher-list-check">
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
             </li>
 
-            <li class="teacher-list-item">
+            <li class="teacher-list-check">
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
             </li>
 
-            <li class="teacher-list-item">
+            <li class="teacher-list-check">
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
@@ -53,10 +53,15 @@
         </div>
 
         <p class="teacher-undertitle"></p>
-        <p class="teacher-text">Высшее образование получила в Институте международных отношений НАУ
-          по специальности переводчик-аналитик. В свободное время проходит
-          курсы от лучших университетов мира по эффективному преподаванию и
-          методикам написания сочинений. В числе пройденных:
+        <p class="teacher-text">Высшее образование получила в Институте международных 
+          отношений НАУ по специальности переводчик-аналитик.
+        </p> 
+          
+        <p class="teacher-text"> В свободное время проходит курсы от лучших университетов мира по эффективному 
+          преподаванию и методикам написания сочинений.
+        </p> 
+        
+        <p class="teacher-text"> В числе пройденных:
           English Grammar and Essay Writing (Berkeley),
           English Grammar&Style (The University of Queesland),
           How to Write an Essay (Berkeley),
