--- a/src/sass/_guarantee.scss
+++ b/src/sass/_guarantee.scss
@@ -103,6 +103,9 @@
     font-size: 20px;
     line-height: 1.4;
   }
+  .guarantee-span-accent {
+    margin-left: -7px;
+  }
   .guarantee-list-item:not(:last-child) {
     margin-bottom: 20px;
 
