--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -95,20 +95,17 @@
     margin-left: 24px;
   }
 }
-// .insta-style-icon {
-//   background-image: url('../images/icons/instagram.png');
-// <<<<<<< Updated upstream
-//   border-radius: 10%;
-//   transition-property: border-radius;
-//   transition-duration: 500ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-// }
-// .insta-style-icon:hover,
-// .insta-style-icon:focus {
-//   border-radius: 50%;
-// =======
-// >>>>>>> Stashed changes
-// }
+.insta-style-icon {
+  background-image: url('../images/icons/instagram.png');
+  border-radius: 10%;
+  transition-property: border-radius;
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.insta-style-icon:hover,
+.insta-style-icon:focus {
+  border-radius: 50%;
+}
 
 .footer-title-container {
   background: #111518;
