--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -319,13 +319,18 @@
   // =========2 секция
   .comments {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
+  }
+  .comments__container {
+    outline: 1px solid teal;
+    justify-content: space-between;
   }
   .container_main_comment {
     padding-left: 40px;
     padding-right: 40px;
   }
   .comments__title {
+    outline: 1px solid red;
     font-style: normal;
     font-weight: 800;
     font-size: 46px;
@@ -336,10 +341,11 @@
     margin-bottom: 20px;
   }
   .comments-list {
+    outline: 1px solid red;
     // display: flex;
     padding-top: 40px;
-    // margin-left: 210px;
-    // margin-right: 212px;
+    margin-left: 112px;
+    margin-right: 112px;
 
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
   }
