--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -290,7 +290,7 @@
       margin-bottom: 0;
     }
   }
-  .request-form-holder .btn {
+  .btn {
     width: 354px;
     height: 70px;
     @include font(700, 14px, 1.214, 0.14em);
