--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2030,7 +2030,7 @@ a {
     margin-bottom: 0;
   }
 
-  .request-form-holder .btn {
+  .btn {
     width: 354px;
     height: 70px;
     font-weight: 700;
