Added: reset,container,var parshall

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -17,3 +17,8 @@
   --location-cafe-color: #f0d1a5;
   --button-hover-color: #ecebeb;
 }
+
+// <!-- SASS VARIABLES--> //
+
+$main-font: 'DM Sans', sans-serif;
+$secondary-font: 'Titan One', sans-serif;
