--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,6 +1,9 @@
 <section class="review">
     <div class="container">
-        <img src="" alt="girl">
+        <img class="review-img" src="./images/testimonials1.jpg" alt="girl"
+        width="85px"
+        height="85px"
+        >
         <div class="review-wrapper">
             <p class="review-text">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
@@ -8,7 +11,7 @@
                 accumsan
                 congue. Lorem ipsum primis in nibh vel risus.
             </p>
-            <h4 class="review-name">Emily, Los Angeles</h4>
         </div>
+        <h4 class="review-name">Emily, Los Angeles</h4>
     </div>
 </section>
