Добавил стилизацию шапки и меню

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,4 +1,3 @@
-
 // Белый, он же - первичный фон
 $primaryWhiteColor: #ffffff;
 // Бледно-розовый фон
@@ -13,3 +12,5 @@ $subtitleTextColor: #ffa5ba;
 $primaryTextColor: #000000;
 $secondaryTextColor: #907e82;
 
+// Фон мобильного меню
+$mobileMenuColor: #e17992;
