--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,8 +1,8 @@
 .container {
-  width: 100%;
+  width: 320px;
 
   margin-left: auto;
   margin-right: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
