add hover focus

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -33,11 +33,10 @@
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et</p>
-                    <div class="more">
+                    <a class="more-link link" href="#">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </div>
+                        </svg> </a>
                 </div>
             </li>
             <li class="cards-item item">
@@ -70,11 +69,10 @@
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et</p>
-                    <div class="more">
+                    <a class="more-link link" href="#">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </div>
+                        </svg> </a>
                 </div>
             </li>
             <li class="cards-item item">
@@ -108,11 +106,10 @@
                     <p class="card-text">
                         Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et</p>
-                    <div class="more">
+                    <a class="more-link link" href="#">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </div>
+                        </svg> </a>
                 </div>
             </li>
 
