--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,14 +16,14 @@
                 </a>
                 <div class="header-btn-tablet-container">
                     <button class="header-button-tablet" type="button">Консультация по телефону</button>
-                    <button type="button" class="close-menu-btn is-open" data-menu-button>
+                    <button type="button" class="close-menu-btn" data-menu-button>
                         <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
-                            <use  class="close-btn-icon"  href="../sprite-header.svg#icon-close_40px-1"></use>
                             <use class="menu-btn-icon"  href="../sprite-header.svg#icon-menu_40px-1"></use>
+                            <use  class="close-btn-icon"  href="../sprite-header.svg#icon-close_40px-1"></use>
                         </svg>
                     </button>
                 </div>
-                <div class="header-additional-menu is-open" data-menu>
+                <div class="header-additional-menu" data-menu>
                     <a class="header-nav-logo-additional" href="#">
                         <div class="header-nav-logo-top">
                             <span  class="header-nav-logo-first">Hell</span>
