--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -16,6 +16,7 @@
 }
 @media screen and (min-width:1316px){
     .container{
-        max-width: 1316px;
+        max-width: 1376px;
+        padding: 0 30px;
     }
 }
