--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,11 +3,14 @@
     <nav class="header-nav">
       <a href="#" class="logo">
         Hell
-        <svg class="logo-img" width="15" height="20">
-          <use href="./images/sprite.svg#icon-fire"></use>
-        </svg>
+        <span class="test">
+          <svg class="logo-img">
+            <use href="./images/sprite.svg#icon-fire"></use>
+          </svg>
+        </span>
+
         EN<br />
-        <span class="logo-description">адский английский</span>
+        <!-- <span class="logo-description">адский английский</span> -->
       </a>
       <div class="header-menu-container" id="menu-container" data-menu>
         <ul class="header-nav-list">
@@ -27,27 +30,29 @@
         <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
       </div>
 
-      <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
+      <div class="header-menu-button-wrapper">
+        <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
 
-      <button
-        type="button"
-        class="menu-button"
-        aria-label="Меню"
-        aria-controls="menu-container"
-        data-menu-button
-      >
-        <svg
-          width="20px"
-          height="20px"
-          aria-label="Переключатель мобильного меню"
+        <button
+          type="button"
+          class="menu-button"
+          aria-label="Меню"
+          aria-controls="menu-container"
+          data-menu-button
         >
-          <use class="icon-menu" href="./images/sprite.svg#icon-burger"></use>
-          <use
-            class="icon-cross"
-            href="./images/sprite.svg#icon-burger-close"
-          ></use>
-        </svg>
-      </button>
+          <svg
+            width="20px"
+            height="20px"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use class="icon-menu" href="./images/sprite.svg#icon-burger"></use>
+            <use
+              class="icon-cross"
+              href="./images/sprite.svg#icon-burger-close"
+            ></use>
+          </svg>
+        </button>
+      </div>
     </nav>
   </div>
 </header>
