--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  padding-bottom: 50px;
+  padding-bottom: 77px;
 
   background-image: url(../images/hero-mobile-tablet.svg);
   background-repeat: no-repeat;
@@ -8,21 +8,14 @@
 
   box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
 
-  s
-  //   &-background {
-  //     position: absolute;
-  //     width: 768px;
-  //     height: 618px;
-  //     left: -64px;
-  //     top: 100%;
+  @media screen and(min-width:768px) and (max-width: 1199px) {
+    background-position: 0 -178px;
+  }
 
-  //     background-image: url(../images/hero-mobile-tablet.svg);
-  //     background-repeat: no-repeat;
-  //     background-size: contain;
-
-  //     box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
-  //     outline: 1px solid tomato;
-  //   }
+  @media screen and (min-width: 1200px) {
+    background-position-y: 250px;
+    padding-bottom: 110px;
+  }
 
   & .container {
     padding: 0 20px;
@@ -31,33 +24,85 @@
   &-title {
     @include font(800, 20px, 1.36, 0.03em);
     padding-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      @include font(800, 26px, 1.308, 0.03em);
+    }
+
+    @media screen and (min-width: 1200px) {
+      @include font(800, 58px, 1.308, 0.03em);
+    }
   }
 
-  &-description {
-    padding-bottom: 30px;
-    @include font(700, 14px, 1.57, 0.08em);
+  &-wrapper {
+    @media screen and (min-width: 768px) {
+      display: flex;
+    }
+  }
+
+  &-title-wrapper {
+    @media screen and (min-width: 768px) {
+      text-align: left;
+      padding-right: 55px;
+    }
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+      padding-right: 100px;
+    }
   }
 
   &-description-light {
     color: var(--txt-grey);
     @include font(500, 14px, 1.57, 0.08em);
+
+    @media screen and (min-width: 1200px) {
+      @include font(500, 20px, 1.649, 0.08em);
+    }
   }
 
   &-description-dark {
     color: var(--txt-dark);
+    @include font(700, 14px, 1.57, 0.08em);
+
+    @media screen and (min-width: 1200px) {
+      @include font(700, 20px, 1.649, 0.08em);
+    }
   }
 
   &-description-orange {
     color: var(--txt-orange);
+    @include font(700, 14px, 1.57, 0.08em);
+
+    @media screen and (min-width: 1200px) {
+      @include font(700, 20px, 1.649, 0.08em);
+    }
   }
 
   & .btn {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+      margin: 30px 0;
+    }
   }
 
   &-img {
     margin: auto;
+    width: 208px;
+    height: 177px;
+
+    @media screen and (min-width: 768px) {
+      width: 375px;
+      height: 320px;
+      margin-right: -10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 840px;
+      height: 720px;
+      margin-right: -90px;
+    }
   }
 }
