--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -94,6 +94,7 @@
 .teacher-img {
   display: block;
   width: 243px;
+  height: 306px;
 }
 
 //.teacher__svg {
@@ -190,6 +191,7 @@
 
   .teacher-img {
     width: 530px;
+    height: 667px;
   }
 
   .teacher-skill-item span {
