--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -36,8 +36,9 @@
 </section>
 <section class="comments">
     <div class="comments__container container">
+        <div class="comments-container__container">
         <h2 class="comments__title">Отзывы выпускников</h2>
-        <div class="comments__container">
+        
             <ul class="comments-list list">
                 <div class="container_main_comment">
                     <li class="comments-list__main-foto">
