Секция програма +доп секция
мелкие коректировки секции
замена png картинок секции программа
+ новая доп секция

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -152,5 +152,33 @@
         </ul>
     </div>
 
+    <section class="choose">
+        <div class="container">
+            <h3 class="choose__title title">Почему нас выбирают</h3>
+            <div class="choose__box">
+                <ul class="choose__list list">
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Обучение в малых командах</p>
+                    </li>
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Визуализированные конспекты</p>
+                    </li>
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Каждое занятие имеет цель и конкретный результат</p>
+                    </li>
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Реальные результаты преподавателя</p>
+                    </li>
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Прогамма курса соответствует требованиям МОН Украины</p>
+                    </li>
+                    <li class="choose__item pseudo-line">
+                        <p class="choose__topic">Набор команд по уровням знаний</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 </section>
+
