--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -9,7 +9,7 @@
         padding-bottom: 392px;
     }
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         padding-top: 120px;
         padding-bottom: 364px;
     }
@@ -21,11 +21,11 @@
         position: absolute;
         top: -120px;
 
-        @media screen and (min-width: 768px) and (max-width: 1399px) {
+        @media screen and (min-width: 768px) and (max-width: 1343px) {
             top: -140px;
         }
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
             top: -150px;
         }
     }
@@ -39,12 +39,12 @@
         text-align: center;
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1399px) {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
         margin-bottom: 52px;
     }
 }
 .border-wrapper {
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         padding-bottom: 100px;
         margin-bottom: 60px;
         border-bottom: 2px solid #546264;
@@ -61,7 +61,7 @@
         background-size: contain;
         background-repeat: no-repeat;
 
-    @media screen and (max-width: 399px) {
+    @media screen and (max-width: 319px) {
         right: 0;
         bottom: -98px;
         width: 120px;
@@ -77,8 +77,8 @@
             }
     }
 
-    @media screen and (min-width: 400px) {
-        right: 10%;
+    @media screen and (min-width: 320px) {
+        right: -10%;
         bottom: -98px;
         width: 176px;
         height: 137px;
@@ -109,9 +109,9 @@
             }
     }
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         width: 672px;
-        height: 502px;
+        height: 491px;
         left: -164px;
         bottom: -320px;
         background-image: url('../images/program/program-desktop.png');
@@ -136,11 +136,11 @@
         padding-left: 100px;
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1399px) {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
         padding-left: 120px;
     }
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         display: flex;
     }
 }
@@ -148,7 +148,7 @@
 .our-program__list-item {
     position: relative;
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
       flex-basis: calc((100% - 4 * 30px) / 5);
     }
 
@@ -157,11 +157,11 @@
         margin-bottom: 40px;
         }
 
-        @media screen and (min-width: 768px) and (max-width: 1399px) {
+        @media screen and (min-width: 768px) and (max-width: 1343px) {
         margin-bottom: 30px;
         }
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
         margin-right: 30px;
         }
 
@@ -180,7 +180,7 @@
             left: -56px;
             }
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
             display: none;
             }
     }
@@ -202,7 +202,7 @@
             left: -61px;
         }
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         width: 16px;
         height: 16px;
         left: 0;
@@ -225,12 +225,12 @@
         content: counter(section) ' ';
         counter-increment: section;
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
             font-size: 30px;
         }
     }
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
         margin-bottom: 25px;
         font-size: 21px;
         line-height: 1.15;
@@ -238,7 +238,7 @@
 }
 
 .our-program__list-item:hover .our-program__list-title {
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         transform: scale(1.2);
     }
 }
@@ -246,26 +246,26 @@
   // ================= Список второго уровня ===============
 
 .our-program__sublist {
-    @media screen and (min-width: 768px) and (max-width: 1399px) {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
         display: flex;
     }
 }
 
 .our-program__sublist-item {
-    @media screen and (min-width: 768px) and (max-width: 1399px) {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
       flex-basis: calc((100% - 2 * 50px) / 3);
     }
 
     &:not(:last-child) {
-        @media screen and (max-width: 479px) {
+        @media screen and (max-width: 319px) {
             margin-bottom: 8px;
         }
 
-        @media screen and (min-width: 768px) and (max-width: 1399px) {
+        @media screen and (min-width: 768px) and (max-width: 1343px) {
             margin-right: 50px;
         }
 
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1344px) {
             margin-bottom: 25px;
         }
     }
@@ -287,7 +287,7 @@
         height: 1px;
         background-color: var(--accent-color);
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         margin-right: 10px;
         width: 20px;
         height: 2px;
@@ -298,7 +298,7 @@
         margin-bottom: 10px;
         height: 32px;
     }
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         font-size: 20px;
         line-height: 1.65;
         margin-bottom: 10px;
@@ -314,8 +314,192 @@
     color: var(--secondary-text-color);
     opacity: 0.5;
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (min-width: 1344px) {
         font-size: 18px;
         line-height: 1.56;
+    }
+}
+
+// Дополнительная секция
+
+.choose {
+    position: absolute;
+    bottom: -230px;
+    width: 280px;
+    counter-reset: section;
+    z-index: 100;
+
+    @media screen and (min-width: 768px) {
+        bottom: -252px;
+    }
+
+    @media screen and (min-width: 1344px) {
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+    width: 100%;
+
+    &__title {
+        color: var(--white-color);
+        padding-right: 130px;
+        margin-bottom: 30px;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 1.35;
+        letter-spacing: 0.03em;
+
+    @media screen and (min-width: 768px) {
+        text-align: center;
+        padding-right: 0px;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 26px;
+        line-height: 1.3;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: 1344px) {
+        display: none;
+        }
+    }
+
+    &__item {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.08em;
+        position: relative;
+        width: 100%;
+
+    @media screen and (min-width: 320px) {
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 216px;
+        }
+    @media screen and (min-width: 1344px) {
+        width: 356px;
+        }
+    }
+
+    &__item:not(:last-child) {
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+            margin-bottom: 53px;
+            }
+        }
+
+    &__item:not(:nth-child(n + 5)) {
+        @media screen and (min-width: 768px) and (max-width: 1343px) {
+            margin-bottom: 63px;
+            }
+        }
+
+    &__item:not(:nth-child(n + 4)) {
+        @media screen and (min-width: 1344px) {
+            margin-bottom: 75px;
+            } 
+        }
+
+    &__item::before {
+        content: '';
+        display: block;
+        width: 13px;
+        height: 2px;
+        background-color: var(--accent-color);
+        position: absolute;
+        left: 3px;
+        top: -20px;
+        margin-bottom: 15px;
+        letter-spacing: 0.08em;
+
+    @media screen and (min-width: 1344px) {
+        top: -15px;
+        }
+    }
+
+    &__item::after {
+        content: counter(section, decimal-leading-zero);
+        counter-increment: section;
+        position: absolute;
+        bottom: 100%;
+        color: #ff6b08;
+        font-weight: 600;
+        left: -2px;
+        top: -30px;
+        width: 20px;
+        -webkit-transform: translateX(130%);
+        transform: translateX(130%);
+        letter-spacing: 0.08em;
+        font-size: 14px;
+        line-height: 1.64;
+
+    @media screen and(min-width:1344px) {
+        font-size: 20px;
+        line-height: 1.65;
+        }
+    }
+
+    &__topic {
+        color: var(--primary-text-color);
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.43;
+        letter-spacing: 0.08em;
+
+    @media screen and (min-width: 768px) {
+        }
+    @media screen and (min-width: 1344px) {
+        font-size: 20px;
+        line-height: 1.4;
+        }
+    }
+
+    &__list {
+        padding-left: 30px;
+        padding-right: 34px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-left: 98px;
+        padding-right: 98px;
+        }
+    @media screen and (min-width: 1344px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-left: 83px;
+        padding-right: 83px;
+        }
+    }
+
+    &__box {
+        background-color: var(--white-color);
+        box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+        padding-top: 53px;
+        padding-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 63px;
+        padding-bottom: 25px;
+        }
+
+    @media screen and (min-width: 1344px) {
+        padding-top: 101px;
+        padding-bottom: 70px;
+        }
+    }
+    .container {
+        @media screen and (min-width: 768px) {
+            max-width: 728px;
+            }
+        @media screen and (min-width: 1344px) {
+            max-width: 1314px;
+            padding-left: 0;
+            padding-right: 0;
+            }
     }
 }
