--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,7 +23,7 @@
       <ul class="hero-service-list">
         <li class="hero-service-list-item">
           <svg class="hero-service-list-icon" width="60" height="60">
-            <use xlink:href="./images/hero/sprite.svg#icon-group-one"></use>
+            <use href="./images/hero/sprite.svg#icon-group-one"></use>
           </svg>
           <p class="hero-service-list-text">
             Адаптированная<br />
@@ -34,7 +34,7 @@
 
         <li class="hero-service-list-item">
           <svg class="hero-service-list-icon" width="60" height="60">
-            <use xlink:href="./images/hero/sprite.svg#icon-group-two"></use>
+            <use href="./images/hero/sprite.svg#icon-group-two"></use>
           </svg>
           <p class="hero-service-list-text">
             Современные<br />
@@ -45,7 +45,7 @@
 
         <li class="hero-service-list-item">
           <svg class="hero-service-list-icon" width="60" height="60">
-            <use xlink:href="./images/hero/sprite.svg#icon-group-three"></use>
+            <use href="./images/hero/sprite.svg#icon-group-three"></use>
           </svg>
           <p class="hero-service-list-text">
             Финансовая<br />
