стили для manufacture mobile
Картинки закоментированы. Нет стилей на кнопку.

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -1,5 +1,95 @@
+/*===========Manufacture styles============*/
 .section-manufacture {
   padding-top: 125px;
   padding-bottom: 97px;
   background-color: $secondaryBgColor;
+  .subtitle {
+    margin-bottom: 15px;
+  }
+  .title {
+    margin-bottom: 26px;
+    margin-left: (59px-20px);
+  }
 }
+.primary-text-manufacture {
+  font-family: 'DM Sans' sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  /* or 19px */
+  color: $primaryTextColor;
+  padding-left: (51px-15px);
+  padding-right: (51px-15px);
+  margin-bottom: 47px;
+}
+.secondary-text-manufacture {
+  font-family: 'DM Sans' sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  /* or 19px */
+
+  color: $secondaryTextColor;
+  padding-left: 51px;
+  padding-right: 51px;
+
+  margin-bottom: 47px;
+  // @media screen and (max-width: 767px) {
+  //   background-image: url('./src/images/manufacture/sectionbg1-mobile.png');
+  //   @media screen and (min-device-pixel-ratio: 2),
+  //     screen and (min-resolution: 192dpi),
+  //     screen and (min-resolution: 2dppx) {
+  //     background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
+  //   }
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   background-image: url('../images/manufacture/sectionbg1-desktop.png');
+  //   @media screen and (min-device-pixel-ratio: 2),
+  //     screen and (min-resolution: 192dpi),
+  //     screen and (min-resolution: 2dppx) {
+  //     background-image: url('../images/manufacture/sectionbg1-desktop@2x.png');
+  //   }
+  // }
+  // background-repeat: no-repeat;
+  // background-position: right 0 left 0 bottom 0;
+  // background-size: cover;
+}
+.button-manufacture {
+  margin-top: 0;
+  margin-bottom: 37px;
+  margin-left: (50px-15px);
+}
+.list-manufacture {
+  padding-left: (20px-15px);
+  padding-right: 70px;
+}
+.number-manufacture {
+  font-family: 'Titan One', sans-serif;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 0.878;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: $titleTextColor;
+  margin-bottom: 16px;
+}
+.list-manufacture-text {
+  font-family: 'DM Sans' sans-serif;
+
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.7;
+  /* or 20px */
+  color: $primaryTextColor;
+  margin-bottom: 38px;
+}
+// .item-milk::before {
+//   background-image: url('./src/images/icons/milk.svg');
+// }
+// .item-apple::before {
+//   background-image: url('./src/images/icons/apple.svg');
+// }
+// .item-lollipop::before {
+//   background-image: url('./src/images/icons/lollipop.svg');
+// }
