--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -1,3 +1,4 @@
+<!-- Manufacture section -->
 <section class="section-manufacture">
   <div class="container">
     <h3 class="subtitle">tradition and love</h3>
@@ -5,52 +6,61 @@
     <!-- <picture>
       <source
         srcset="
-          ./images/manufacture/home-pic4-desktop.png    1x,
-          ./images/manufacture/home-pic4-desktop@2x.png 2x
+          ../images/manufacture/home-pic4-desktop.png    1x,
+          ../images/manufacture/home-pic4-desktop@2x.png 2x
         "
         media="(min-width: 1200px)"
       />
       <source
         srcset="
-          ./images/manufacture/home-pic4-tablet.png    1x,
-          ./images/manufacture/home-pic4-tablet@2x.png 2x
+          ../images/manufacture/home-pic4-tablet.png    1x,
+          ../images/manufacture/home-pic4-tablet@2x.png 2x
         "
         media="(min-width: 768px)"
       />
       <img
         srcset="
-          ./images/manufacture/home-pic4-mobile.png    1x,
-          ./images/manufacture/home-pic4-mobile@2x.png 2x
+          ../images/manufacture/home-pic4-mobile.png    1x,
+          ../images/manufacture/home-pic4-mobile@2x.png 2x
         "
-        src="./images/manufacture/home-pic4-mobile.png"
+        src="../images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
       /> -->
     <!-- </picture> -->
 
-    <p>
+    <p class="primary-text-manufacture">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
       cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo
       fringilla.
     </p>
-    <p>
-      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-      Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-      suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-      tincidunt. Aliquam erat volutpat. Aenean accumsan.
-    </p>
-    <button class="button">Read more</button>
-    <ul class="list">
-      <li>
-        <p>721</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+  </div>
+
+  <p class="secondary-text-manufacture">
+    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+    Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit
+    ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt. Aliquam
+    erat volutpat. Aenean accumsan.
+  </p>
+  <div class="container">
+    <button class="button button-manufacture">Read more</button>
+    <ul class="list list-manufacture">
+      <li class="item-milk">
+        <p class="number-manufacture">721</p>
+        <p class="list-manufacture-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
-      <li>
-        <p>16kg</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      <li class="item-apple">
+        <p class="number-manufacture">16kg</p>
+        <p class="list-manufacture-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
-      <li>
-        <p>84</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      <li class="item-lollipop">
+        <p class="number-manufacture">84</p>
+        <p class="list-manufacture-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
     </ul>
   </div>
