Изменения для центрирования

--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -4,8 +4,12 @@
 }
 .list-location {
   margin-top: -20px;
+  margin-bottom: 54px;
 
   & .card {
+    max-width: 220px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 20px;
     padding-top: 43px;
     padding-bottom: 43px;
