--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,6 +1,162 @@
-.teacher {
-  @media screen and (max-width: 767px) {
-    padding-top: 39px;
-    padding-bottom: 50px;
+// .teacher__title {
+//   font-size: 46px;
+//
+// }
+
+// .teacher__block {
+//   display: flex;
+// }
+
+// .teacher__desc {
+//   padding-left: 30px;
+// }
+
+// .teacher__subtitle {
+//   font-size: 30px;
+//   line-height: 36,57px;
+//   font-weight: 800;
+
+//   border-bottom: 1px solid #B9B9B9;
+//   min-width: 640px;
+//   padding-bottom: 15px;
+// }
+
+// .teacher__about {
+//   padding-top: 30px;
+// }
+
+// // ul {
+// //   list-style-image: url(./images/teacher/vect.png);
+// // }
+// .teacher__list {
+//   font-size: 16px;
+//   line-height: 20px;
+//   font-weight: 600;
+
+//   li {
+//     padding-bottom: 30px;
+//     padding-left: 50px;
+//     list-style: none;
+//     background: url(../images/teacher/vect.png) no-repeat 0 0;
+//   }
+//   &::after {
+//     content: "";
+//     display: inline-block;
+//     width: 20px;
+//     height: 2px;
+//     background-color:#FF6B09;
+//     margin-bottom: 20px;
+//   }
+// }
+
+// .teacher__p {
+//   font-size: 18px;
+//   color: #B9B9B9;
+//   line-height: 26px;
+
+// }
+// .teacher__p {
+//   padding-bottom: 30px;
+// }
+
+// .teacher__link {
+//   color:#FF6B09;
+// }
+
+@media screen and (min-width: 320px) {
+  .teacher {
+    padding-top: 450px;
+  }
+  .teacher__title {
+    max-width: 320px;
+    font-size: 20px;
+    line-height: 59px;
+    font-weight: 800;
+  }
+  .teacher__subtitle {
+    padding-top: 20px;
+    font-size: 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #b9b9b9;
+  }
+  .teacher__about {
+    padding-top: 20px;
+    .teacher__list {
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 600;
+
+      li {
+        padding-bottom: 30px;
+        padding-left: 30px;
+        list-style: none;
+        background: url(../images/teacher/vect.png) no-repeat 0 0;
+      }
+      &::after {
+        content: '';
+        display: inline-block;
+        width: 20px;
+        height: 2px;
+        background-color: #ff6b09;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  .teacher__p {
+    font-size: 14px;
+    color: #b9b9b9;
+    line-height: 26px;
+  }
+  .teacher__p {
+    padding-bottom: 20px;
+  }
+
+  .teacher__link {
+    font-size: 14px;
+    color: #ff6b09;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .teacher__title {
+    padding-bottom: 20px;
+    max-width: 768px;
+    font-size: 28px;
+  }
+  .teacher__subtitle {
+    padding-top: 0;
+  }
+  .teacher__block {
+    display: flex;
+  }
+  .teacher__desc {
+    padding-left: 50px;
+  }
+  .teacher__p {
+    font-size: 13px;
+  }
+  .teacher__about .teacher__list li {
+    padding-left: 30px;
+  }
+  .teacher__item {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 650px;
+  }
+  .teacher__title {
+    max-width: 1344px;
+  }
+  .teacher__desc {
+    max-width: 495px;
+  }
+  .teacher__p {
+    font-size: 15px;
+  }
+  .teacher__about .teacher__list li {
+    padding-left: 50px;
   }
 }
