Добавляет разметку testimonials

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -6,6 +6,8 @@ $contacts-color: #907e82;
 $background-color: #ffb8ca;
 $coffee-color: #f0d1a5;
 $milkshakes-color: #c2e297;
+$testimonials-bg-text: #fafafa;
+$testimonials-lines-text: #e1e1e1;
 
 $title-font: Titan One, sans-serif;
 $primary-font: DM Sans, sans-serif;
