--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -4,10 +4,12 @@
         <div class="feature-list__container container">
             <ul class="feature-list list ">
                 
+                <div class="vertical_dotted_line"></div>
                 <li class="feature-list__item">
                     <!-- <svg class="item">
                         <use  href="./images/sprite.svg#icon-fire" width="20"></use>
                     </svg> -->
+                    
                     <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
                         тестировании. Иначе мы вернем деньги. <span>*</span>
                     </p>
