--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -17,9 +17,9 @@
   .feature-list__item:not(:last-child) {
     margin-bottom: 23px;
   }
-  .feature-list__item {
-    // outline: 1px solid rgb(58, 128, 0);
-    position: relative;
+  .feature-list__item::before {
+    outline: 1px solid rgb(58, 128, 0);
+    position: absolute;
     display: flex;
     font-style: normal;
     font-weight: 500;
@@ -37,7 +37,21 @@
     display: inline-block;
     margin-left: 20px;
   }
-
+  // .vertical_dotted_line {
+  //   // outline: 1px solid red;
+  //   border-left: 2px dashed rgb(0, 0, 0);
+  //   position: absolute;
+  //   height: 300px;
+  //   // margin-top: 60px;
+  //   margin-left: 27px;
+  // }
+  //   .feature-list__item::before {
+  //   contain: '';
+  //   left: 0;
+  //   top: 0;
+  //   border-left: 4px dotted black;
+  //   height: 100px;
+  // }
   // =========2 секция
   .comments__title {
     font-style: normal;
