--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -7,8 +7,9 @@
                 на English ВНО, <br> которые <br>
                 мы <span class="problem-text-exception">помогаем </span>решить
             </p>
+        
             <section class="section-problems">
-                <div class="container">
+                <div class="container-problems">
                     <ul class="problem-list">
                         <li class="problem-list-item">
                             <h3 class="problems-title accent-line">
@@ -47,6 +48,6 @@
                 </div>
             </section>
         
-      
+        </div>
     </div>
 </section>
