--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -2,6 +2,9 @@ body {
   font-family: var(--primary-font);
   color: var(--title-text-color);
 }
+body {
+  counter-reset: section  ;
+}
 
 h1,
 h2,
