--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -1,13 +1,5 @@
 
 .problems-text{
-// font-family:
-// font-style: normal;
-// font-weight: 800;
-// font-size: 20px;
-// line-height: 136%;
-// letter-spacing: 0.03em;
-// color:white;
-// }
 font-family: Montserrat;
 font-style: normal;
 font-weight: 800;
@@ -26,12 +18,12 @@ background-color: black;
 color:#FF6B09;
 }
 .section-problems{
-padding-top: 30px;  
+width: 280px; 
+padding-left: 30px;
 position: absolute;
-padding-top: 30px;
-bottom: -150px;
-left: -50px;
-transform:translate(-50%);
+padding-top: 27px;
+padding-bottom: 27px;
+bottom: -195px;
 background: #FFFFFF;
 box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -71,9 +63,42 @@ position: relative;
 .problem-list-item:not(:last-child){
     margin-bottom: 20px;
 }
-// @media screen and (max-width:768px){
-// .problem-list-item {
-// margin-bottom: 10px;} 
-// }
 
+@media screen and (min-width:768px){
+    
+    .problems{
+        height: 340px;
+        padding-top: 60px;
+    }
+    .section-problems{
+        padding-left: 96px;
+        width: 688px;
+        bottom: -220px;
+    }
+    .problems-text{
+        box-sizing: content-box;
+        width: 568px;
+        font-size: 26px;
+        line-height: 1.307;
+    } 
+   
+    .problem-list{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;   
+    }
+    .problem-list-item{
+        flex-basis: calc(100%/2 - 22px);
+    }
+    .problem-list-item:nth-child(-n+4){
+        margin-bottom: 20px;}
+   
+   
+// .problem-list-item::nth-child(-n+4){
+// margin-bottom: 20px;
+//  }
+//  .problem-list-item::nth-child(2n){
+//  margin-left: 25px;
+// }
+}
 
