добавляет позиционирование фоновому изображению

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,8 @@
 // @import './layout/header';
 // @import './layout/hero';
 @import './layout/how-we-do-it';
+@import './layout/programm';
+@import './layout/why-us';
 @import './layout/registration';
 
 // utils
