added styles for desktop (program and advantages)

--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -72,3 +72,44 @@
     margin-top: 30px;
   }
 }
+
+@media screen and (min-width: 1376px) {
+  .advantages {
+    margin-top: -199px;
+    padding-top: 0px;
+  }
+
+  .advantages .container {
+    max-width: 1376px;
+    padding: 0 30px;
+  }
+  .advantages-title {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+  }
+
+  .advantages-list {
+    padding: 38px 82px 70px 44px;
+    margin-left: -40px;
+    margin-top: -32px;
+  }
+
+  .advantages-item {
+    font-size: 20px;
+    line-height: 1.65;
+    margin-left: 40px;
+    margin-top: 32px;
+    width: 356px;
+  }
+
+  .advantages-text {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
