--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -3,22 +3,22 @@
   padding-bottom: 537px;
   background-color: #000000;
 
-  // background-image: url('../images/program/program-mobile.png');
-  // background-repeat: no-repeat;
-  // background-size: 120px 137px;
-  // background-position: right bottom 440px;
+  background-image: url('../images/program/program-mobile.png');
+  background-repeat: no-repeat;
+  background-size: 120px 137px;
+  background-position: right bottom 440px;
 
-  // @media screen and (min-device-pixel-ratio: 2),
-  //   screen and (min-resolution: 192dpi),
-  //   screen and (min-resolution: 2dppx) {
-  //   background-image: url('../images/program/program-mobile@2x.png');
-  // }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url('../images/program/program-mobile@2x.png');
+  }
 }
-
-.program .container {
-  position: relative;
+@media screen and (max-width: 1375px) {
+  .program .container {
+    position: relative;
+  }
 }
-
 .program-title {
   margin-bottom: 43px;
   font-weight: 800;
@@ -38,8 +38,10 @@
   background-color: #ffffff;
   width: 1292px;
   height: 1px;
-  transform: rotate(90deg);
-  transform-origin: top left;
+  @media screen and (max-width: 1375px) {
+    transform: rotate(90deg);
+    transform-origin: top left;
+  }
 }
 
 .program-list {
@@ -71,8 +73,10 @@
   margin-right: 20px;
 }
 
-.program-term-list {
-  margin-top: 5px;
+@media screen and (max-width: 1375px) {
+  .program-term-list {
+    margin-top: 5px;
+  }
 }
 
 .program-term-list > li {
@@ -105,21 +109,27 @@
   opacity: 0.5;
 }
 
-.program-img {
-  position: absolute;
-  right: 0;
-  bottom: -100px;
-}
-
 @media screen and (min-width: 768px) {
   .program {
     padding-top: 60px;
     padding-bottom: 392px;
+
+    background-image: url('../images/program/program-tablet.png');
+    background-repeat: no-repeat;
+    background-size: 384px 280px;
+    background-position: right bottom 253px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/program/program-tablet@2x.png');
+    }
   }
 
   .program-title {
     margin-bottom: 52px;
     font-size: 26px;
+    text-align: left;
   }
 
   .program-title::before {
@@ -145,16 +155,18 @@
     margin-bottom: 30px;
   }
 
-  .program-term-list > li:not(:last-child) {
-    margin-right: 50px;
-  }
+  @media screen and (max-width: 1375px) {
+    .program-term-list > li:not(:last-child) {
+      margin-right: 50px;
+    }
 
-  .program-term-list > li:first-child {
-    width: 176px;
-  }
+    .program-term-list > li:first-child {
+      width: 176px;
+    }
 
-  .program-term-list > li:nth-child(2) {
-    width: 156px;
+    .program-term-list > li:nth-child(2) {
+      width: 156px;
+    }
   }
 
   .program-content-list {
@@ -171,8 +183,95 @@
     margin-left: -62px;
     margin-right: 50px;
   }
+}
 
-  .program-img {
-    bottom: -139px;
+@media screen and (min-width: 1376px) {
+  .program .container {
+    max-width: 1376px;
+    padding: 0 30px;
+  }
+  .program {
+    padding-top: 120px;
+    padding-bottom: 363px;
+
+    background-image: url('../images/program/program-minidesktop.png');
+    background-repeat: no-repeat;
+    background-size: 519px 502px;
+    background-position: left bottom 59px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/program/program-minidesktop@2x.png');
+    }
+  }
+
+  .program-title {
+    margin-bottom: 160px;
+    font-size: 46px;
+    line-height: 1.24;
+  }
+
+  .program-list {
+    display: flex;
+    padding-left: 0;
+  }
+
+  .program-term-list {
+    flex-direction: column;
+  }
+
+  .program-list > li {
+    font-size: 20px;
+    line-height: 1.4;
+    width: 240px;
+  }
+
+  .program-list > li:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 29px;
+  }
+
+  .program-title::before {
+    width: 100vw;
+    top: 277px;
+    left: 0px;
+    right: 0;
+  }
+
+  .program-term::before {
+    content: '';
+    margin-left: 0px;
+    margin-right: 0px;
+    position: absolute;
+    top: -65px;
+  }
+
+  .program-content-list {
+    margin-top: 10px;
+  }
+
+  .program-term-list > li {
+    margin-top: 25px;
+    font-size: 20px;
+    line-height: 1.6;
+  }
+
+  .program-content-item {
+    font-size: 18px;
+    line-height: 1.56;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .program {
+    background-image: url('../images/program/program-desktop.png');
+    background-size: 672px 502px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/program/program-desktop@2x.png');
+    }
   }
 }
