--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -45,10 +45,13 @@
 
 
 .benefits-description {
-    @media screen and (min-width: 1200px) {
+
+        @media screen and (min-width: 1200px) {
         background-image: url(../images/splashing_milk@2x.jpg);
-        z-index: 1;
+        z-index: -1;
       }
+
+    padding-bottom: 25px;  
 }
  
 .benefits-list-item {
@@ -60,9 +63,33 @@
 }
 
 .benefits-list {
-   
+ 
    @media screen and (max-width: 767px) {
    max-width: 230px;
    }
-   
+
+   & h3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    }
+
+    padding-top: 15px;
+    padding-bottom: 40px;
+
+
+}
+
+.read-more {
+    margin-left: 45px;
+    height: 44px;
+    width: 175px;
+    color: $accent-color;
+    border-radius: 22px;
+    border-color: $primary-text-color;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+
+    &:hover,
+    &:focus {
+        border-color: $accent-color;
+    }
 }
