--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -12,7 +12,7 @@
                 <p>Aliquam erat volutpat. Aenean accumsan.</p>
             </div>         
             
-            <button class="read-more">read more
+            <button class="read-more">Read more
                 <!-- <svg class="read-more=svg" width="10" height="10"> <use href="./svg/symbol-defs.svg#icon-icon-send"></use> </svg> -->
             </button>
         </div>
@@ -21,20 +21,20 @@
             <ul class="benefits-list">
 
                 <li>
-                    <!-- <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg> -->
+                    <img src="./images/benefits-list-1.jpg" alt="cup">
                     <h3>721</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
 
                 
                 <li class="benefits-list-item">
-                    <!-- <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg> -->
+                    <img src="./images/benefits-list-2.png" alt="cup">
                     <h3>16kg</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
 
                 <li>
-               
+                    <img src="./images/benefits-list-3.png" alt="cup">
                     <h3>84</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
