пофиксила ссылку на карточки

--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -9,15 +9,18 @@
 }
 
 .approach-item {
+  margin: 0 auto;
+  margin-bottom: 15px;
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.approach-card {
   width: 280px;
   height: 280px;
-  margin: 0 auto;
   padding-top: 30px;
   padding-bottom: 25px;
   padding-left: 5px;
   padding-right: 5px;
-  margin-bottom: 15px;
-  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   transition: background-color var(--transition-function);
 }
 
@@ -26,29 +29,29 @@
   text-decoration: none;
 }
 
-.approach-item:hover,
-.approach-item:focus {
+.approach-link:hover .approach-card,
+.approach-link:focus .approach-card {
   background-color: var(--accent-color);
   transform: scale(1.05);
 }
 
-.approach-item:hover .approach-icon,
-.approach-item:focus .approach-icon {
+.approach-link:hover .approach-icon,
+.approach-link:focus .approach-icon {
   fill: var(--white-color);
 }
 
-.approach-item:hover .approach-text,
-.approach-item:focus .approach-text {
+.approach-link:hover .approach-text,
+.approach-link:focus .approach-text {
   color: var(--white-color);
 }
 
-.approach-item:hover .approach-subtitle,
-.approach-item:focus .approach-subtitle {
+.approach-link:hover .approach-subtitle,
+.approach-link:focus .approach-subtitle {
   color: var(--white-color);
 }
 
-.approach-item:hover .approach-subtitle::after,
-.approach-item:focus .approach-subtitle::after {
+.approach-link:hover .approach-subtitle::after,
+.approach-link:focus .approach-subtitle::after {
   background-color: var(--white-color);
 }
 
@@ -108,13 +111,16 @@
   }
 
   .approach-item {
+    margin-right: 20px;
+    margin-bottom: 27px;
+  }
+
+  .approach-card {
     width: 334px;
     height: 334px;
     padding-top: 40px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-right: 20px;
-    margin-bottom: 27px;
   }
   .approach-icon {
     margin-bottom: 30px;
@@ -140,15 +146,16 @@
   .approach-list {
     margin: -10px;
   }
-
-  .approach-item {
-    display: block;
+  .approach-card {
     width: 425px;
-    max-width: calc((100% - 3 * 20px) / 3);
     height: 396px;
-    margin: 10px;
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .approach-item {
+    margin: 10px;
+    max-width: calc((100% - 3 * 20px) / 3);
   }
 
   .approach-subtitle {
