добавляет стили для декоративной полосы над списком

--- a/src/sass/layout/_programm.scss
+++ b/src/sass/layout/_programm.scss
@@ -206,7 +206,7 @@
     margin-bottom: 329px;
     background-image: url(../images/our_program/women_our_program.png);
     background-size: 672px 502px;
-    background-position: calc(50% - 468px) 676px;
+    background-position: calc(50% - 498px) 676px;
     padding-top: 120px;
     padding-bottom: 363px;
   }
@@ -227,15 +227,15 @@
     margin-left: 0;
     padding-top: 60px;
 
-    // &:before {
-    //   top: 278px;
-    //   left: 0;
-    //   content: '';
-    //   display: block;
-    //   width: 100vw;
-    //   height: 1px;
-    //   background-color: var(--white-color);
-    // }
+    &:before {
+      top: 278px;
+      left: 0;
+      content: '';
+      display: block;
+      width: 100vw;
+      height: 1px;
+      background-color: var(--white-color);
+    }
 
     &:after {
       display: none;
