--- a/src/sass/layout/_why-us.scss
+++ b/src/sass/layout/_why-us.scss
@@ -47,10 +47,6 @@
 
     color: var(--orange-color);
   }
-
-  &:not(:last-child) {
-    margin-bottom: 20px;
-  }
 }
 
 .why-us__description {
@@ -60,6 +56,14 @@
   letter-spacing: 0.08em;
 
   color: var(--black-color);
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .why-us__list-item {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
