--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -27,39 +27,40 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: #ffffff;
-}
 
-.program-title::before {
-  content: '';
-  position: absolute;
-  top: 84px;
-  left: 95px;
-  display: flex;
-  background-color: #ffffff;
-  width: 1292px;
-  height: 1px;
-  @media screen and (max-width: 1375px) {
-    transform: rotate(90deg);
-    transform-origin: top left;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 84px;
+    left: 95px;
+    display: flex;
+    background-color: #ffffff;
+    width: 1292px;
+    height: 1px;
+
+    @media screen and (max-width: 1375px) {
+      transform: rotate(90deg);
+      transform-origin: top left;
+    }
   }
 }
 
 .program-list {
   padding-left: 100px;
   position: relative;
-}
 
-.program-list > li {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 2;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
+  & > li {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 2;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 
-.program-list > li:not(:last-child) {
-  margin-bottom: 40px;
+  & > li:not(:last-child) {
+    margin-bottom: 40px;
+  }
 }
 
 .program-term::before {
@@ -130,29 +131,29 @@
     margin-bottom: 52px;
     font-size: 26px;
     text-align: left;
-  }
 
-  .program-title::before {
-    width: 712px;
-    top: 92px;
-    left: 93px;
+    &::before {
+      width: 712px;
+      top: 92px;
+      left: 93px;
+    }
   }
 
   .program-list {
     padding-left: 109px;
+
+    & > li:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 
   .program-term-list {
     display: flex;
-  }
 
-  .program-term-list > li {
-    display: inline-block;
-    align-items: flex-start;
-  }
-
-  .program-list > li:not(:last-child) {
-    margin-bottom: 30px;
+    & > li {
+      display: inline-block;
+      align-items: flex-start;
+    }
   }
 
   @media screen and (max-width: 1375px) {
@@ -210,33 +211,39 @@
     margin-bottom: 160px;
     font-size: 46px;
     line-height: 1.24;
+
+    &::before {
+      width: 100vw;
+      top: 277px;
+      left: 0px;
+      right: 0;
+    }
   }
 
   .program-list {
     display: flex;
     padding-left: 0;
+
+    & > li {
+      font-size: 20px;
+      line-height: 1.4;
+      width: 240px;
+    }
+
+    & > li:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 29px;
+    }
   }
 
   .program-term-list {
     flex-direction: column;
-  }
 
-  .program-list > li {
-    font-size: 20px;
-    line-height: 1.4;
-    width: 240px;
-  }
-
-  .program-list > li:not(:last-child) {
-    margin-bottom: 0;
-    margin-right: 29px;
-  }
-
-  .program-title::before {
-    width: 100vw;
-    top: 277px;
-    left: 0px;
-    right: 0;
+    & > li {
+      margin-top: 25px;
+      font-size: 20px;
+      line-height: 1.6;
+    }
   }
 
   .program-term::before {
@@ -249,12 +256,6 @@
 
   .program-content-list {
     margin-top: 10px;
-  }
-
-  .program-term-list > li {
-    margin-top: 25px;
-    font-size: 20px;
-    line-height: 1.6;
   }
 
   .program-content-item {
